# rust-hl7-parser

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
benchmarks/: bench_parse.py
python/rust_hl7_parser/: __init__.py  accessor.py  annotator.py  compat.py  validator.py
python/rust_hl7_parser/schemas/: datatypes.json  message_types.json  v2_1.json  v2_2.json  v2_3.json  v2_3_1.json  v2_4.json  v2_5.json  v2_5_1.json  v2_6.json  v2_7.json  v2_7_1.json  v2_8.json  v2_8_1.json  v2_8_2.json  v2_9.json
src/: error.rs  lib.rs  parser.rs  python_bindings.rs  types.rs
tests/: test_accessor.py  test_annotator.py  test_compat.py  test_file_parsing.py  test_parser.py  test_validator.py
tests/fixtures/: sample_barns.hl7  sample_sanitized.hl7
